melhorias na usabilidade da api_key